2009-04-18  Christopher Faylor  <me+cygwin@cgf.cx>

	* mkimport: Specify .text for stub explicitly.
	* speclib: Add a dummy '.idata$7' section referring to the dll
	associated with the real import library.

2009-04-18  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (globify): Only call mbtowc for non-ascii chars.

2009-04-17  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (globify): Make multibyte-aware.

2009-04-17  Corinna Vinschen  <corinna@vinschen.de>

	* flock.cc (class inode_t): Add i_wait member and matching methods
	wait(), unwait(), and waiting().
	(inode_t::inode_t): Initialize i_wait to 0.
	(fhandler_disk_file::lock): Only remove node if no other thread is
	waiting for a blocking lock.
	(lf_setlock): Manipulate node->i_wait to signal that a thread is
	waiting for a blocking lock in this node.
	(lf_findoverlap): Reinstantiate SELF test as in original code.

2009-04-16  Corinna Vinschen  <corinna@vinschen.de>

	* dlfcn.cc (get_full_path_of_dll): Just return a bool value.  Drop
	local path_conv in favor of getting it as parameter.  Add local string
	buffer instead of getting it as parameter.
	(dlopen): Accommodate get_full_path_of_dll change.  Fetch WCHAR Windows
	path from path_conv variable and call LoadLibraryW.

2009-04-16  Corinna Vinschen  <corinna@vinschen.de>

	* ntdll.h (STATUS_LOCK_NOT_GRANTED): Define.
	* syscalls.cc (unlink_nt): Handle STATUS_LOCK_NOT_GRANTED same as
	STATUS_SHARING_VIOLATION.  Add lengthy comment to explain why.

2009-04-15  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (path_conv::get_wide_win32_path): Allow relative paths.
	(cygwin_conv_path): In case of CCP_POSIX_TO_WIN_W, convert relative 
	paths to absolute paths if the relative pathname length exceeds
	MAX_PATH.

2009-04-15  Corinna Vinschen  <corinna@vinschen.de>

	* libc/bsdlib.cc: Align copyright with upstream.
	* libc/fnmatch.c: Ditto.
	* libc/fts.c: Ditto.
	* libc/inet_addr.c: Ditto.
	* libc/inet_network.c: Ditto.
	* libc/rcmd.cc: Ditto.